--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,2 @@
 # metamaterials
-
-$$\text{S}_1(N) = \sum_{p=1}^N \text{E}(p)$$
+<script type="math/tex; mode=display">\frac{\bar{Y} - \mu}{\sigma_Y/\sqrt{N}}</script>
