--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,4 @@
 # metamaterials
 Some Octave/Matlab scripts for the convenient definition of 
-matamaterial unit-cells and the computation of their scattering
+metamaterial unit-cells and the computation of their scattering
 propterties with the FDTD solver openEMS
