comment on folder structure "libraries"

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,3 +2,6 @@
 Some Octave/Matlab scripts for the convenient definition of 
 metamaterial unit-cells and the computation of their scattering
 propterties with the FDTD solver openEMS
+## libraries
+This folder contains *.m files which implement basic functionality
+like adding material information to a CSX structure
